# xplainable-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_DESKTOP_INSTRUCTIONS.txt  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESPONSE_HANDLING.md  SECURITY.md  SETUP_COMPLETE.md  SYNC_WORKFLOW.md  USAGE.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  quickstart.py
.claude/: settings.local.json
examples/: sync_scenarios.md
scripts/: sync_workflow.py  test_mcp_server.py
tests/: __init__.py  test_server.py
xplainable_mcp/: __init__.py  cli.py  client_manager.py  mcp_instance.py  response_handlers.py  server.py  sync_utils.py  tool_discovery.py  tool_manager.py  tool_registry.py
xplainable_mcp/tools/: __init__.py  autotrain.py  collections.py  datasets.py  deployments.py  gpt.py  inference.py  misc.py  models.py  preprocessing.py
